k8s-manifests/sdtd-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: sdtd-project
spec: {}
status: {}
