k8s-manifests/consumer.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: sdtd-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: hamdaneyassine/consumer:v5.0
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - ps aux | grep python || exit 1
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - ps aux | grep python || exit 1
          initialDelaySeconds: 5
          periodSeconds: 10
