k8s-manifests/producer.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: sdtd-project
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      serviceAccountName: producer-service-account
      containers:
      - name: producer
        image: ghbadr/producer:7da5520c
        resources:
            requests:
              cpu: "1000m"
              memory: "1000Mi"
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - ps aux | grep python || exit 1
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - ps aux | grep python || exit 1
          initialDelaySeconds: 5
          periodSeconds: 10
