k8s-manifests/api.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-backend
spec:
  selector:
    matchLabels:
      app: web-backend
  template:
    metadata:
      labels:
        app: web-backend
    spec:
      containers:
      - name: web-backend
        image: ghbadr/node-api
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"

---

# Service
apiVersion: v1
kind: Service
metadata:
  name: web-backend-service
spec:
  type: NodePort
  selector:
    app: web-backend
  ports:
    - protocol: TCP
      port: 3000
      nodePort: 31111
