k8s-manifests/backend.yaml
---

# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: sdtd-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: hamdaneyassine/backend:v10.0
        ports:
        - containerPort: 3001
        livenessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
---

# Service
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: sdtd-project
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: backend

---
# NodePort Service
apiVersion: v1
kind: Service
metadata:
  name: backend-nodeport
  namespace: sdtd-project
spec:
  type: NodePort
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: backend
