k8s-manifests/frontend.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: sdtd-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: hamdaneyassine/frontend:v3.0
        ports:
        - containerPort: 3000
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sdtd-project
spec:
  type: NodePort
  ports:
  - port: 3000
  selector:
    app: frontend
