k8s-manifests/kafka.yaml

# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: sdtd-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: obsidiandynamics/kafka
        ports:
        - containerPort: 9092
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - nc -z localhost 9092
          initialDelaySeconds: 15
          periodSeconds: 3
          timeoutSeconds: 3
          failureThreshold: 10
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - nc -z localhost 9092
          initialDelaySeconds: 5
          periodSeconds: 3
          timeoutSeconds: 3
          failureThreshold: 10
---

# Service
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: sdtd-project
spec:
  type: ClusterIP
  ports:
  - port: 9092
  selector:
    app: kafka

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
  namespace: sdtd-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
      - name: kafdrop
        image: obsidiandynamics/kafdrop
        ports:
        - containerPort: 9000
---

# Services
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: sdtd-project
spec:
  type: ClusterIP
  ports:
  - port: 9092
  selector:
    app: kafka

---

apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  namespace: sdtd-project
spec:
  type: NodePort
  ports:
  - port: 9000
  selector:
    app: kafdrop
