k8s-manifests/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-service
  name: nginx-service
  namespace: sdtd-project
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-app
  externalIPs:
    - 192.168.7.20
    - 192.168.7.21
